syntax = "proto3";

package bookticker;

message BookTicker {
  string id = 1;
  string symbol = 2;
  string bid_price = 3;
  string bid_qty = 4;
  string ask_price = 5;
  string ask_qty = 6;
}
